# ChangeLog for dev-ruby/rspec-expectations
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-expectations/ChangeLog,v 1.33 2012/10/28 12:08:41 armin76 Exp $

  28 Oct 2012; Raúl Porcel <armin76@gentoo.org>
  rspec-expectations-2.6.0-r1.ebuild:
  ia64/sparc stable wrt #426668

*rspec-expectations-2.11.3 (16 Sep 2012)

  16 Sep 2012; Hans de Graaff <graaff@gentoo.org>
  +rspec-expectations-2.11.3.ebuild:
  Version bump.

  14 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> metadata.xml:
  Update metadata.xml so that it's the same as most other packages.

*rspec-expectations-2.11.2 (12 Aug 2012)

  12 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org>
  +rspec-expectations-2.11.2.ebuild, -rspec-expectations-2.11.1.ebuild:
  Version bump; use the new rspec recipe for testing; install the real gemspec
  (fixed) so that bundler won't complain about missing diff-lcs.

  26 Jul 2012; Anthony G. Basile <blueness@gentoo.org>
  rspec-expectations-2.6.0-r1.ebuild:
  Stable ppc64, bug #426668

  26 Jul 2012; Anthony G. Basile <blueness@gentoo.org>
  rspec-expectations-2.6.0-r1.ebuild:
  Stable ppc, bug #426668

  23 Jul 2012; Andreas Schuerch <nativemad@gentoo.org>
  rspec-expectations-2.10.0.ebuild:
  x86 keyworded, see bug 417587

  22 Jul 2012; Jeff Horelick <jdhore@gentoo.org>
  rspec-expectations-2.6.0-r1.ebuild:
  marked x86 per bug 426668

  15 Jul 2012; Agostino Sarubbo <ago@gentoo.org>
  rspec-expectations-2.6.0-r1.ebuild:
  Stable for amd64, wrt bug #426668

*rspec-expectations-2.11.1 (15 Jul 2012)

  15 Jul 2012; Hans de Graaff <graaff@gentoo.org>
  +rspec-expectations-2.11.1.ebuild:
  Version bump.

*rspec-expectations-2.10.0 (10 Jun 2012)

  10 Jun 2012; Hans de Graaff <graaff@gentoo.org>
  +rspec-expectations-2.10.0.ebuild:
  Version bump. Drop x86 keyword, bug 417587.

  06 May 2012; Kacper Kowalik <xarthisius@gentoo.org>
  rspec-expectations-2.6.0.ebuild:
  ppc64 stable wrt #369573
