@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/rspec-expectations
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-expectations/ChangeLog,v 1.33 2012/10/28 12:08:41 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-expectations/ChangeLog,v 1.34 2012/10/28 17:20:42 armin76 Exp $
+
+  28 Oct 2012; Raúl Porcel <armin76@gentoo.org>
+  rspec-expectations-2.6.0.ebuild, rspec-expectations-2.6.0-r1.ebuild,
+  rspec-expectations-2.10.0.ebuild, rspec-expectations-2.11.2.ebuild,
+  rspec-expectations-2.11.3.ebuild:
+  alpha stable, add ~alpha
 
   28 Oct 2012; Raúl Porcel <armin76@gentoo.org>
   rspec-expectations-2.6.0-r1.ebuild:
